--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ redis
 psycopg2-binary
 gunicorn
 python-dateutil
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
